# skyrimnet-tts

./: .gitignore  1_Install.ps1  2_Start.bat  2_Start_DeepSpeed.bat  2_Start_XTTS.ps1  README.md  README_smol.md  build_skyrimnet-xtts.ps1  build_skyrimnet-xtts_smol.ps1  freeze.txt  pyproject.toml  requirements.txt  requirements_smol.txt  run_xtts.ps1  setup.ps1  skyrimnet-api.py  skyrimnet-xtts copy 2.spec  skyrimnet-xtts.py  skyrimnet-xtts.spec  skyrimnet-xtts_smol.spec  skyrimnet_config.txt  test_debug_endpoints.py  track_upstream.bat  track_upstream_changes.py  track_upstream_requirements.txt  utils.py
.github/workflows/: publish.yml
examples/: 2_Start_XTTS.bat  Start.bat  Start_XTTS.bat  Start_XTTS.ps1
pyinstaller-hooks/: rthook_setup_cuda_path.py  rthook_triton_nvidia_only.py
skyrimnet-xtts/: README.md  __init__.py  __main__.py  shared_app_utils.py  shared_args.py  shared_audio_utils.py  shared_cache_utils.py  shared_config.py  shared_models.py  skyrimnet_api.py  skyrimnet_xtts.py  test_xtts.py  utils.py
skyrimnet-xtts/COQUI_AI_TTS/: .models.json  __init__.py  api.py  model.py
skyrimnet-xtts/COQUI_AI_TTS/config/: __init__.py  shared_configs.py
skyrimnet-xtts/COQUI_AI_TTS/demos/xtts_ft_demo/: xtts_demo.py
skyrimnet-xtts/COQUI_AI_TTS/encoder/: dataset.py
skyrimnet-xtts/COQUI_AI_TTS/encoder/configs/: base_encoder_config.py  emotion_encoder_config.py  speaker_encoder_config.py
skyrimnet-xtts/COQUI_AI_TTS/encoder/models/: base_encoder.py  lstm.py  resnet.py
skyrimnet-xtts/COQUI_AI_TTS/encoder/utils/: generic_utils.py  prepare_voxceleb.py
skyrimnet-xtts/COQUI_AI_TTS/server/: server.py
skyrimnet-xtts/COQUI_AI_TTS/tts/configs/: align_tts_config.py  bark_config.py  delightful_tts_config.py  fast_pitch_config.py  fast_speech_config.py  fastspeech2_config.py  glow_tts_config.py  neuralhmm_tts_config.py  overflow_config.py  shared_configs.py  speedy_speech_config.py  tacotron2_config.py  tacotron_config.py  tortoise_config.py  vits_config.py  xtts_config.py
skyrimnet-xtts/COQUI_AI_TTS/tts/datasets/: __init__.py  dataset.py
skyrimnet-xtts/COQUI_AI_TTS/tts/layers/: __init__.py  losses.py
skyrimnet-xtts/COQUI_AI_TTS/tts/models/: __init__.py  align_tts.py  bark.py  base_tacotron.py  base_tts.py  delightful_tts.py  forward_tts.py  glow_tts.py  neuralhmm_tts.py  overflow.py  tacotron.py  tacotron2.py  tortoise.py  vits.py  xtts.py
skyrimnet-xtts/COQUI_AI_TTS/tts/utils/: fairseq.py  languages.py  managers.py  speakers.py  synthesis.py  visual.py
skyrimnet-xtts/COQUI_AI_TTS/utils/: downloaders.py  manage.py  synthesizer.py  voices.py
skyrimnet-xtts/COQUI_AI_TTS/utils/audio/: __init__.py  cupy_transforms.py  numpy_transforms.py  processor.py  torch_transforms.py
skyrimnet-xtts/COQUI_AI_TTS/vc/configs/: freevc_config.py  knnvc_config.py  openvoice_config.py  shared_configs.py
skyrimnet-xtts/COQUI_AI_TTS/vc/models/: __init__.py  base_vc.py  freevc.py  knnvc.py  openvoice.py
skyrimnet-xtts/COQUI_AI_TTS/vocoder/configs/: __init__.py  fullband_melgan_config.py  hifigan_config.py  melgan_config.py  multiband_melgan_config.py  parallel_wavegan_config.py  shared_configs.py  univnet_config.py  wavegrad_config.py  wavernn_config.py
(+97 files in other folders)
